--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="snake.css">
 </head>
 <body>
-    <h1>Nagula chavithi</h1>
+    <h1>snake game</h1>
     <div id="score">Score: 0</div>
     <div id="controls">
         <button onclick="changeDirection({ code: 'ArrowUp' })">Up</button>
